# pitcount-ml-training

./: .gitignore  README.md  setup.cfg
model-training-pack/: .gitignore  README.md  setup.cfg
model-training-pack/training_package/: predict_user.py  prepare_training_data.py  train_model_from_dataset.py  training_pipeline.py
training_package/: analysis.py  bulk_pipeline.py  evaluate_model.py  load_czi_image_and_label.py  predict_mask_from_model.py  prepare_training_data.py  train_model_from_dataset.py  training_pipeline.py  transformers.py
