[metadata]
name = napari-pitcount-cfim-training
version = 1.0.0
description = Training tools for Napari Pitcount CFIM
author = Markus L. Bille
author_email = github+markus@bille.dk
url = https://github.com/MaxusTheOne/napari-pitcount-cfim
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    tensorflow
    pydantic
    xmltodict
    czifile
    scikit-learn
    scikit-image
    matplotlib
    imageio
    opencv-python
    torch
    torchvision
    numpy

python_requires = >=3.9

[options.entry_points]
console_scripts =
    pitcount-cfim-training = training_package.training_pipeline:main
    pitcount-cfim-predict = training_package.predict_mask_from_model:main
    pitcount-cfim-bulk-training = training_package.bulk_pipeline:main

[options.package_data]
training_package =
    training_data/processed/*

